codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 10643
expression: contents
---

                                                                                                    
  Would you like to run the following command?                                                      
                                                                                                    
  $ python - <<'PY'                                                                                 
  print('hello')                                                                                    
  PY                                                                                                
                                                                                                    
› 1. Yes, proceed (y)                                                                               
  2. No, and tell Codex what to do differently (esc)                                                
                                                                                                    
  Press enter to confirm or esc to cancel
