codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 10592
expression: terminal.backend().vt100().screen().contents()
---

                                                                                                    
  Would you like to run the following command?                                                      
                                                                                                    
  $ echo hello world                                                                                
                                                                                                    
› 1. Yes, proceed (y)                                                                               
  2. Yes, and don't ask again for commands that start with `echo hello world` (p)                   
  3. No, and tell Codex what to do differently (esc)                                                
                                                                                                    
  Press enter to confirm or esc to cancel
