codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 12740
expression: term.backend().vt100().screen().contents()
---



























• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

• Explored
  └ Search Change Approved
    Read diff_render.rs

• Investigating rendering code (0s • esc to interrupt)

 
› Summarize recent commits
 
  tab to queue message                                       100% context left
