codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 11134
expression: term.backend().vt100().screen().contents()
---





✔ Auto-reviewer approved codex to run rm -f /tmp/guardian-approved.sqlite this
  time

 
› Ask Codex to do anything
 
  ? for shortcuts                                                                                    100% context left
